@@ -118,6 +118,12 @@ class IgnoreCommitOptimizeUpdateProcessor extends UpdateRequestProcessor {
       return;
     }
 
+    if (cmd.getReq().getParams().getBool(DistributedUpdateProcessor.COMMIT_END_POINT, false)) {
+      // this is a targeted commit from replica to leader needed for recovery, so can't be ignored
+      if (next != null) next.processCommit(cmd);
+      return;
+    }
+
     final String cmdType = cmd.optimize ? "optimize" : "commit";
     if (errorCode != null) {
       IgnoreCommitOptimizeUpdateProcessorFactory.log.info(
